codepkg/objects/PA_Project_Closeout_Review_Checklist__mdt.object
<CustomObject>
    <description>Review questionnaires implementation for PA Project Closeout</description>
    <fields>
        <fullName>Helptext_Document_Name1__c</fullName>
        <label>Helptext Document Name1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Helptext_Document_Name2__c</fullName>
        <label>Helptext Document Name2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Helptext_Document_URL1__c</fullName>
        <label>Helptext Document URL1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Helptext_Document_URL2__c</fullName>
        <label>Helptext Document URL2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Helptext__c</fullName>
        <description>Help text for question</description>
        <label>Helptext</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Question</description>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Render_NA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Answer as Not applicable</description>
        <label>Render NA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Render_No__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Answer as NO</description>
        <label>Render No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Render_yes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Answer as yes</description>
        <label>Render yes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>Questions serial number</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Show_No_Comments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>No checkbox value flag</description>
        <label>Show No Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Only_For_Yes_Value__c</fullName>
        <label>Show Only For Yes Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Yes_Comments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Yes checkbox value flag</description>
        <label>Show Yes Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shown_NA_Comments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NA checkbox value flag</description>
        <label>Show NA Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Static_Text__c</fullName>
        <label>Static Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CDAA</fullName>
                    <default>true</default>
                    <label>CDAA</label>
                </value>
                <value>
                    <fullName>Federal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PA Project Closeout Review Checklist</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>Sequence__c</columns>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>IsProtected</columns>
        <columns>Helptext__c</columns>
        <columns>Question__c</columns>
        <columns>Render_NA__c</columns>
        <columns>Render_No__c</columns>
        <columns>Render_yes__c</columns>
        <columns>Shown_NA_Comments__c</columns>
        <columns>Show_No_Comments__c</columns>
        <columns>Show_Yes_Comments__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
    </listViews>
    <pluralLabel>PA Project Closeout Reviews</pluralLabel>
</CustomObject>